--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li class="menu-active"><a href="#intro">Home</a></li>
-          <li><a href="#about">About Us</a></li>
+          <li><a href="#about">About FOSSEE</a></li>
           <li><a href="#features">Features</a></li>
           <li><a href="#pricing">Pricing</a></li>
           <li><a href="#team">Team</a></li>
@@ -70,7 +70,7 @@
 
     <div class="intro-text">
       <h2>Welcome to FOSSEE</h2>
-      <p>We are team of talanted designers making websites with Bootstrap</p>
+      <p>We promote the use of FOSS tools in the country</p>
     </div>
 
     <div class="product-screens">
@@ -99,7 +99,7 @@
     <section id="about" class="section-bg">
       <div class="container-fluid">
         <div class="section-header">
-          <h3 class="section-title">About Us</h3>
+          <h3 class="section-title">About FOSSEE</h3>
           <span class="section-divider"></span>
           <p class="section-description">
             </p>
@@ -138,7 +138,7 @@
     <section id="team" >
       <div class="container">
         <div class="section-header">
-          <h3 class="section-title">Our Team</h3>
+          <h3 class="section-title">Speakers</h3>
           <span class="section-divider"></span>
           <p class="section-description"></p>
         </div>
@@ -242,10 +242,10 @@
               <img class="advanced-feature-img-left" src="img/advanced-feature-2.jpg" alt="">
               <div data-aos="fade-left">
                 <h2>Duis aute irure dolor in reprehenderit in voluptate velit esse</h2>
-                <i class="ion-ios-paper-outline" data-aos="fade-left"></i>
-                <p data-aos="fade-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-                <i class="ion-ios-color-filter-outline" data-aos="fade-left" data-aos-delay="200"></i>
-                <p data-aos="fade-left" data-aos-delay="200">Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
+                <i class="ion-ios-eye" data-aos="fade-left"></i>
+                <p data-aos="fade-left">Awareness: To spread awareness on open source and promote and encourage the usage of FOSS tools.</p>
+                <i class="ion-radio-waves" data-aos="fade-left" data-aos-delay="200"></i>
+                <p data-aos="fade-left" data-aos-delay="200">Promote: we promote the usage of open source to help improve the quality of education.</p>
                 <i class="ion-ios-barcode-outline" data-aos="fade-left" data-aos-delay="400"></i>
                 <p data-aos="fade-left" data-aos-delay="400">Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
               </div>
@@ -296,7 +296,7 @@
       <div class="container">
 
         <div class="section-header">
-          <h3 class="section-title">More Features</h3>
+          <h3 class="section-title">Workshop Details</h3>
           <span class="section-divider"></span>
           <p class="section-description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
         </div>
@@ -305,32 +305,32 @@
 
           <div class="col-lg-6">
             <div class="box" data-aos="fade-right">
-              <div class="icon"><i class="ion-ios-stopwatch-outline"></i></div>
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
+              <div class="icon"><i class="ion-calendar"></i></div>
+              <h4 class="title"><a href="">Date</a></h4>
               <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident etiro rabeta lingo.</p>
             </div>
           </div>
 
           <div class="col-lg-6">
             <div class="box" data-aos="fade-left">
-              <div class="icon"><i class="ion-ios-bookmarks-outline"></i></div>
-              <h4 class="title"><a href="">Dolor Sitema</a></h4>
+              <div class="icon"><i class="ion-ios-stopwatch-outline"></i></div>
+              <h4 class="title"><a href="">Time</a></h4>
               <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata nodera clas.</p>
             </div>
           </div>
 
           <div class="col-lg-6">
             <div class="box" data-aos="fade-right">
-              <div class="icon"><i class="ion-ios-heart-outline"></i></div>
-              <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
+              <div class="icon"><i class="ion-ios-location"></i></div>
+              <h4 class="title"><a href="">Venue</a></h4>
               <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur trinige zareta lobur trade.</p>
             </div>
           </div>
 
           <div class="col-lg-6">
             <div class="box" data-aos="fade-left">
-              <div class="icon"><i class="ion-ios-analytics-outline"></i></div>
-              <h4 class="title"><a href="">Magni Dolores</a></h4>
+              <div class="icon"><i class="ion-ios-people"></i></div>
+              <h4 class="title"><a href="">Organised by</a></h4>
               <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum rideta zanox satirente madera</p>
             </div>
           </div>
