--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         <ul class="nav-menu">
           <li class="menu-active"><a href="#intro">Home</a></li>
           <li><a href="#about">About FOSSEE</a></li>
-          <li><a href="#features">Features</a></li>
-          <li><a href="#pricing">Pricing</a></li>
+          <li><a href="#features">Speakers</a></li>
+          <li><a href="#pricing">Special attractions</a></li>
           <li><a href="#team">Team</a></li>
           <li><a href="#gallery">Gallery</a></li>
           <li><a href="#contact">Contact Us</a></li>
@@ -181,6 +181,106 @@
     <!--==========================
       Product Featuress Section
     ============================-->
+    <section id="advanced-features">
+    <div class="features-row section-bg">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <img class="advanced-feature-img-right" src="img/advanced-feature-3.jpg" alt="" data-aos="fade-left">
+            <div data-aos="fade-right">
+              <h2>Duis aute irure dolor in reprehenderit in voluptate velit esse</h2>
+              <h3>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+
+              <p>Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="advanced-features">
+    <div class="features-row">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <img class="advanced-feature-img-left" src="img/advanced-feature-2.jpg" alt="">
+            <div data-aos="fade-left">
+              <h2>Duis aute irure dolor in reprehenderit in voluptate velit esse</h2>
+              <i class="ion-ios-eye" data-aos="fade-left"></i>
+              <p data-aos="fade-left">Awareness: To spread awareness on open source and the usage of FOSS tools among the community.</p>
+              <i class="ion-radio-waves" data-aos="fade-left" data-aos-delay="200"></i>
+              <p data-aos="fade-left" data-aos-delay="200">Promotion: To promote the usage of FOSS tools to help improve the quality of education.</p>
+              <i class="ion-android-laptop" data-aos="fade-left" data-aos-delay="400"></i>
+              <p data-aos="fade-left" data-aos-delay="400">Hands-on experience: To provide hands-on experience on the usage of FOSS tools</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section><!-- #advanced-features -->
+  <!--==========================
+    Pricing Section
+  ============================-->
+  <section id="pricing" class="section-bg">
+    <div class="container">
+
+      <div class="section-header">
+        <h3 class="section-title">Special Attraction</h3>
+        <span class="section-divider"></span>
+        <p class="section-description"></p>
+      </div>
+
+      <div class="row">
+
+        <div class="col-lg-4 col-md-6">
+          <div class="box" data-aos="fade-right">
+            <h3>Free</h3>
+            <h4><sup>$</sup>0<span> month</span></h4>
+            <ul>
+              <li><i class="ion-android-checkmark-circle"></i> Quam adipiscing vitae proin</li>
+              <li><i class="ion-android-checkmark-circle"></i> Nec feugiat nisl pretium</li>
+              <li><i class="ion-android-checkmark-circle"></i> Nulla at volutpat diam uteera</li>
+              <li><i class="ion-android-checkmark-circle"></i> Pharetra massa massa ultricies</li>
+              <li><i class="ion-android-checkmark-circle"></i> Massa ultricies mi quis hendrerit</li>
+            </ul>
+
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6">
+          <div class="box featured" data-aos="fade-up">
+            <h3>Business</h3>
+            <h4><sup>$</sup>29<span> month</span></h4>
+            <ul>
+              <li><i class="ion-android-checkmark-circle"></i> Quam adipiscing vitae proin</li>
+              <li><i class="ion-android-checkmark-circle"></i> Nec feugiat nisl pretium</li>
+              <li><i class="ion-android-checkmark-circle"></i> Nulla at volutpat diam uteera</li>
+              <li><i class="ion-android-checkmark-circle"></i> Pharetra massa massa ultricies</li>
+              <li><i class="ion-android-checkmark-circle"></i> Massa ultricies mi quis hendrerit</li>
+            </ul>
+
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6">
+          <div class="box" data-aos="fade-left">
+            <h3>Developer</h3>
+            <h4><sup>$</sup>49<span> month</span></h4>
+            <ul>
+              <li><i class="ion-android-checkmark-circle"></i> Quam adipiscing vitae proin</li>
+              <li><i class="ion-android-checkmark-circle"></i> Nec feugiat nisl pretium</li>
+              <li><i class="ion-android-checkmark-circle"></i> Nulla at volutpat diam uteera</li>
+              <li><i class="ion-android-checkmark-circle"></i> Pharetra massa massa ultricies</li>
+              <li><i class="ion-android-checkmark-circle"></i> Massa ultricies mi quis hendrerit</li>
+            </ul>
+
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </section><!-- #pricing -->
     <section id="features" class="section-bg">
       <div class="container">
 
@@ -234,43 +334,6 @@
     <!--==========================
       Product Advanced Featuress Section
     ============================-->
-    <section id="advanced-features">
-      <div class="features-row">
-        <div class="container">
-          <div class="row">
-            <div class="col-12">
-              <img class="advanced-feature-img-left" src="img/advanced-feature-2.jpg" alt="">
-              <div data-aos="fade-left">
-                <h2>Duis aute irure dolor in reprehenderit in voluptate velit esse</h2>
-                <i class="ion-ios-eye" data-aos="fade-left"></i>
-                <p data-aos="fade-left">Awareness: To spread awareness on open source and promote and encourage the usage of FOSS tools.</p>
-                <i class="ion-radio-waves" data-aos="fade-left" data-aos-delay="200"></i>
-                <p data-aos="fade-left" data-aos-delay="200">Promote: we promote the usage of open source to help improve the quality of education.</p>
-                <i class="ion-ios-barcode-outline" data-aos="fade-left" data-aos-delay="400"></i>
-                <p data-aos="fade-left" data-aos-delay="400">Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="features-row section-bg">
-        <div class="container">
-          <div class="row">
-            <div class="col-12">
-              <img class="advanced-feature-img-right" src="img/advanced-feature-3.jpg" alt="" data-aos="fade-left">
-              <div data-aos="fade-right">
-                <h2>Duis aute irure dolor in reprehenderit in voluptate velit esse</h2>
-                <h3>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
-                <i class="ion-ios-albums-outline"></i>
-                <p>Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section><!-- #advanced-features -->
 
     <!--==========================
       Call To Action Section
@@ -342,70 +405,6 @@
     <!--==========================
       Clients
     ============================-->
-
-    <!--==========================
-      Pricing Section
-    ============================-->
-    <section id="pricing" class="section-bg">
-      <div class="container">
-
-        <div class="section-header">
-          <h3 class="section-title">Pricing</h3>
-          <span class="section-divider"></span>
-          <p class="section-description"></p>
-        </div>
-
-        <div class="row">
-
-          <div class="col-lg-4 col-md-6">
-            <div class="box" data-aos="fade-right">
-              <h3>Free</h3>
-              <h4><sup>$</sup>0<span> month</span></h4>
-              <ul>
-                <li><i class="ion-android-checkmark-circle"></i> Quam adipiscing vitae proin</li>
-                <li><i class="ion-android-checkmark-circle"></i> Nec feugiat nisl pretium</li>
-                <li><i class="ion-android-checkmark-circle"></i> Nulla at volutpat diam uteera</li>
-                <li><i class="ion-android-checkmark-circle"></i> Pharetra massa massa ultricies</li>
-                <li><i class="ion-android-checkmark-circle"></i> Massa ultricies mi quis hendrerit</li>
-              </ul>
-
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6">
-            <div class="box featured" data-aos="fade-up">
-              <h3>Business</h3>
-              <h4><sup>$</sup>29<span> month</span></h4>
-              <ul>
-                <li><i class="ion-android-checkmark-circle"></i> Quam adipiscing vitae proin</li>
-                <li><i class="ion-android-checkmark-circle"></i> Nec feugiat nisl pretium</li>
-                <li><i class="ion-android-checkmark-circle"></i> Nulla at volutpat diam uteera</li>
-                <li><i class="ion-android-checkmark-circle"></i> Pharetra massa massa ultricies</li>
-                <li><i class="ion-android-checkmark-circle"></i> Massa ultricies mi quis hendrerit</li>
-              </ul>
-
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6">
-            <div class="box" data-aos="fade-left">
-              <h3>Developer</h3>
-              <h4><sup>$</sup>49<span> month</span></h4>
-              <ul>
-                <li><i class="ion-android-checkmark-circle"></i> Quam adipiscing vitae proin</li>
-                <li><i class="ion-android-checkmark-circle"></i> Nec feugiat nisl pretium</li>
-                <li><i class="ion-android-checkmark-circle"></i> Nulla at volutpat diam uteera</li>
-                <li><i class="ion-android-checkmark-circle"></i> Pharetra massa massa ultricies</li>
-                <li><i class="ion-android-checkmark-circle"></i> Massa ultricies mi quis hendrerit</li>
-              </ul>
-
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </section><!-- #pricing -->
-
 
     <!--==========================
       Frequently Asked Questions Section
