--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <li class="menu-active"><a href="#intro">Home</a></li>
           <li><a href="#about">About FOSSEE</a></li>
           <li><a href="#features">Speakers</a></li>
-          <li><a href="#pricing">Special attractions</a></li>
+          <li><a href="#pricing">Special Attraction</a></li>
           <li><a href="#team">Team</a></li>
           <li><a href="#gallery">Gallery</a></li>
           <li><a href="#contact">Contact Us</a></li>
@@ -294,7 +294,7 @@
           </div>
 
           <div class="col-lg-4 col-md-5 features-img">
-            <img src="img/product-features.png" alt="" data-aos="fade-right" data-aos-easing="ease-out-back">
+            <img src="img/strat-2.jpg" alt="" data-aos="fade-right" data-aos-easing="ease-out-back">
           </div>
 
           <div class="col-lg-8 col-md-7 ">
