extra content removedand added few images

--- a/index.html
+++ b/index.html
@@ -111,20 +111,18 @@
           </div>
 
           <div class="col-lg-6 content" data-aos="fade-left">
-            <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elite storium paralate</h2>
-            <h3>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h3>
+            <h2>##</h2>
+            <h3></h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua ullamco laboris nisi ut aliquip ex ea commodo consequat.
             </p>
 
             <ul>
-              <li><i class="ion-android-checkmark-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              <li><i class="ion-android-checkmark-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-              <li><i class="ion-android-checkmark-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+              <li><i class="ion-android-checkmark-circle"></i></li>
+              <li><i class="ion-android-checkmark-circle"></i></li>
+              <li><i class="ion-android-checkmark-circle"></i></li>
             </ul>
 
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum Libero justo laoreet sit amet cursus sit amet dictum sit. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend donec
             </p>
           </div>
         </div>
@@ -152,8 +150,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="member">
               <div class="pic"><img src="img/team/team-2.jpg" alt=""></div>
-              <h4>Sarah Jhinson</h4>
-              <span>Product Manager</span>
+              <h4>ABHAS ABHINAV</h4>
               <div class="social">
                 <a href=""><i class="fa fa-google-plus"></i></a>
                 <a href=""><i class="fa fa-linkedin"></i></a>
@@ -164,8 +161,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="member">
               <div class="pic"><img src="img/team/team-3.jpg" alt=""></div>
-              <h4>William Anderson</h4>
-              <span>CTO</span>
+              <h4>KANNAN M MOUDGALYA</h4>
               <div class="social">
                 <a href=""><i class="fa fa-google-plus"></i></a>
                 <a href=""><i class="fa fa-linkedin"></i></a>
@@ -188,11 +184,11 @@
           <div class="col-12">
             <img class="advanced-feature-img-right" src="img/advanced-feature-3.jpg" alt="" data-aos="fade-left">
             <div data-aos="fade-right">
-              <h2>Duis aute irure dolor in reprehenderit in voluptate velit esse</h2>
-              <h3>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+              <h2>##</h2>
+              <h3>@@@</h3>
+              <p></p>
 
-              <p>Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p></p>
             </div>
           </div>
         </div>
@@ -206,13 +202,13 @@
           <div class="col-12">
             <img class="advanced-feature-img-left" src="img/advanced-feature-2.jpg" alt="">
             <div data-aos="fade-left">
-              <h2>Duis aute irure dolor in reprehenderit in voluptate velit esse</h2>
+              <h2>MOTTO OF FOSSEE</h2>
               <i class="ion-ios-eye" data-aos="fade-left"></i>
-              <p data-aos="fade-left">Awareness: To spread awareness on open source and the usage of FOSS tools among the community.</p>
+              <p data-aos="fade-left"><strong>Awareness:</strong> To spread awareness on open source and the usage of FOSS tools among the community.</p>
               <i class="ion-radio-waves" data-aos="fade-left" data-aos-delay="200"></i>
-              <p data-aos="fade-left" data-aos-delay="200">Promotion: To promote the usage of FOSS tools to help improve the quality of education.</p>
+              <p data-aos="fade-left" data-aos-delay="200"><strong>Promotion:</strong> To promote the usage of FOSS tools to help improve the quality of education.</p>
               <i class="ion-android-laptop" data-aos="fade-left" data-aos-delay="400"></i>
-              <p data-aos="fade-left" data-aos-delay="400">Hands-on experience: To provide hands-on experience on the usage of FOSS tools</p>
+              <p data-aos="fade-left" data-aos-delay="400"><strong>Hands-on experience:</strong> To provide hands-on experience on the usage of FOSS tools</p>
             </div>
           </div>
         </div>
@@ -236,13 +232,11 @@
         <div class="col-lg-4 col-md-6">
           <div class="box" data-aos="fade-right">
             <h3>Free</h3>
-            <h4><sup>$</sup>0<span> month</span></h4>
             <ul>
-              <li><i class="ion-android-checkmark-circle"></i> Quam adipiscing vitae proin</li>
-              <li><i class="ion-android-checkmark-circle"></i> Nec feugiat nisl pretium</li>
-              <li><i class="ion-android-checkmark-circle"></i> Nulla at volutpat diam uteera</li>
-              <li><i class="ion-android-checkmark-circle"></i> Pharetra massa massa ultricies</li>
-              <li><i class="ion-android-checkmark-circle"></i> Massa ultricies mi quis hendrerit</li>
+              <li><i class="ion-android-checkmark-circle"></i>@@</li>
+              <li><i class="ion-android-checkmark-circle"></i>@@</li>
+              <li><i class="ion-android-checkmark-circle"></i>@@</li>
+              <li><i class="ion-android-checkmark-circle"></i>@@</li>
             </ul>
 
           </div>
@@ -251,13 +245,12 @@
         <div class="col-lg-4 col-md-6">
           <div class="box featured" data-aos="fade-up">
             <h3>Business</h3>
-            <h4><sup>$</sup>29<span> month</span></h4>
             <ul>
-              <li><i class="ion-android-checkmark-circle"></i> Quam adipiscing vitae proin</li>
-              <li><i class="ion-android-checkmark-circle"></i> Nec feugiat nisl pretium</li>
-              <li><i class="ion-android-checkmark-circle"></i> Nulla at volutpat diam uteera</li>
-              <li><i class="ion-android-checkmark-circle"></i> Pharetra massa massa ultricies</li>
-              <li><i class="ion-android-checkmark-circle"></i> Massa ultricies mi quis hendrerit</li>
+              <li><i class="ion-android-checkmark-circle"></i> @@</li>
+              <li><i class="ion-android-checkmark-circle"></i> @@</li>
+              <li><i class="ion-android-checkmark-circle"></i> @@</li>
+              <li><i class="ion-android-checkmark-circle"></i> @@</li>
+              <li><i class="ion-android-checkmark-circle"></i> @@</li>
             </ul>
 
           </div>
@@ -266,13 +259,12 @@
         <div class="col-lg-4 col-md-6">
           <div class="box" data-aos="fade-left">
             <h3>Developer</h3>
-            <h4><sup>$</sup>49<span> month</span></h4>
             <ul>
-              <li><i class="ion-android-checkmark-circle"></i> Quam adipiscing vitae proin</li>
-              <li><i class="ion-android-checkmark-circle"></i> Nec feugiat nisl pretium</li>
-              <li><i class="ion-android-checkmark-circle"></i> Nulla at volutpat diam uteera</li>
-              <li><i class="ion-android-checkmark-circle"></i> Pharetra massa massa ultricies</li>
-              <li><i class="ion-android-checkmark-circle"></i> Massa ultricies mi quis hendrerit</li>
+              <li><i class="ion-android-checkmark-circle"></i> @@</li>
+              <li><i class="ion-android-checkmark-circle"></i> @@</li>
+              <li><i class="ion-android-checkmark-circle"></i> @@</li>
+              <li><i class="ion-android-checkmark-circle"></i> @@</li>
+              <li><i class="ion-android-checkmark-circle"></i> @@</li>
             </ul>
 
           </div>
@@ -303,23 +295,23 @@
 
               <div class="col-lg-6 col-md-6 box" data-aos="fade-left">
                 <div class="icon"><i class="ion-ios-speedometer-outline"></i></div>
-                <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-                <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident clarida perendo.</p>
+                <h4 class="title"><strong>Scilab</strong></h4>
+                <p class="description">Scilab is a free and open source software for numerical computaion developed by Scilab Enterprises,France.Scilab also includesXcos which is an open source alternative to Simulink.</p>
               </div>
               <div class="col-lg-6 col-md-6 box" data-aos="fade-left" data-aos-delay="100">
                 <div class="icon"><i class="ion-ios-flask-outline"></i></div>
-                <h4 class="title"><a href="">Dolor Sitema</a></h4>
-                <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata noble dynala mark.</p>
+                <h4 class="title"><strong>Python</strong></h4>
+                <p class="description">Python is a general-purpose high-level remarkably powerful dynamic programming language that is used in wide variety of applications domain.It supports multiple programming paradigms.</p>
               </div>
               <div class="col-lg-6 col-md-6 box" data-aos="fade-left" data-aos-delay="200">
                 <div class="icon"><i class="ion-social-buffer-outline"></i></div>
-                <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-                <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur teleca starter sinode park ledo.</p>
+                <h4 class="title"><strong>Open Foam</strong></h4>
+                <p class="description">Open Foam ia a free and open source CFD toolbox used to solve anything from complex fluids flows involving chemical reactions ,turblence and heat transfer to solid dynamics and electromagnets.</p>
               </div>
               <div class="col-lg-6 col-md-6 box" data-aos="fade-left" data-aos-delay="300">
                 <div class="icon"><i class="ion-ios-analytics-outline"></i></div>
-                <h4 class="title"><a href="">Magni Dolores</a></h4>
-                <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum dinoun trade capsule.</p>
+                <h4 class="title"><strong>Sci Lab Aurdino</strong></h4>
+                <p class="description">The Scilab-Aurdino interface is devoted to the control of aurdino from scilab.The interface help user to perform embded systems experimentson Aurdino using scilab code and also through GUI based simulation enviornment,Xcos.</p>
               </div>
             </div>
 
@@ -361,7 +353,7 @@
         <div class="section-header">
           <h3 class="section-title">Workshop Details</h3>
           <span class="section-divider"></span>
-          <p class="section-description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+          <p class="section-description"></p>
         </div>
 
         <div class="row">
@@ -370,7 +362,7 @@
             <div class="box" data-aos="fade-right">
               <div class="icon"><i class="ion-calendar"></i></div>
               <h4 class="title"><a href="">Date</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident etiro rabeta lingo.</p>
+              <p class="description">@#</p>
             </div>
           </div>
 
@@ -378,7 +370,7 @@
             <div class="box" data-aos="fade-left">
               <div class="icon"><i class="ion-ios-stopwatch-outline"></i></div>
               <h4 class="title"><a href="">Time</a></h4>
-              <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata nodera clas.</p>
+              <p class="description">#$</p>
             </div>
           </div>
 
@@ -386,7 +378,7 @@
             <div class="box" data-aos="fade-right">
               <div class="icon"><i class="ion-ios-location"></i></div>
               <h4 class="title"><a href="">Venue</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur trinige zareta lobur trade.</p>
+              <p class="description">@#</p>
             </div>
           </div>
 
@@ -394,7 +386,7 @@
             <div class="box" data-aos="fade-left">
               <div class="icon"><i class="ion-ios-people"></i></div>
               <h4 class="title"><a href="">Organised by</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum rideta zanox satirente madera</p>
+              <p class="description">!@#</p>
             </div>
           </div>
 
@@ -450,24 +442,24 @@
 
           <div class="col-lg-4 col-md-6">
             <div class="gallery-item" data-aos="fade-up">
-              <a href="img/gallery/gallery-4.jpg" class="gallery-popup">
-                <img src="img/gallery/gallery-4.jpg" alt="">
+              <a href="img/gallery/gallery4.jpg" class="gallery-popup">
+                <img src="img/gallery/gallery4.jpg" alt="">
               </a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6">
             <div class="gallery-item" data-aos="fade-up">
-              <a href="img/gallery/gallery-5.jpg" class="gallery-popup">
-                <img src="img/gallery/gallery-5.jpg" alt="">
+              <a href="img/gallery/gallery5.jpg" class="gallery-popup">
+                <img src="img/gallery/gallery5.jpg" alt="">
               </a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6">
             <div class="gallery-item" data-aos="fade-up">
-              <a href="img/gallery/gallery-6.jpg" class="gallery-popup">
-                <img src="img/gallery/gallery-6.jpg" alt="">
+              <a href="img/gallery/gallery6.jpg" class="gallery-popup">
+                <img src="img/gallery/gallery6.jpg" alt="">
               </a>
             </div>
           </div>
@@ -477,9 +469,47 @@
       </div>
     </section><!-- #gallery -->
 
+
     <!--==========================
       Contact Section
     ============================-->
+    <section id="contact">
+  <div class="container">
+    <div class="row" data-aos="fade-up">
+
+      <div class="col-lg-4 col-md-4">
+        <div class="contact-about">
+          <h3>##</h3>
+          <p>@@</p>
+          <div class="social-links">
+            <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
+            <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
+            <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-3 col-md-4">
+        <div class="info">
+          <div>
+            <i class="ion-ios-location-outline"></i>
+            <p>A108 Adam Street<br>New York, NY 535022</p>
+          </div>
+
+          <div>
+            <i class="ion-ios-email-outline"></i>
+            <p>info@example.com</p>
+          </div>
+
+          <div>
+            <i class="ion-ios-telephone-outline"></i>
+            <p>+1 5589 55488 55</p>
+          </div>
+
+        </div>
+      </div>
+
+    </section>
 
 
 
@@ -493,7 +523,7 @@
       <div class="row">
         <div class="col-lg-6 text-lg-left text-center">
           <div class="copyright">
-            &copy; Copyright <strong>Avilon</strong>. All Rights Reserved
+            Made With Love &#10084;	by <strong>GNU/LINUX USERS' GROUP</strong>.
           </div>
           <div class="credits">
             <!--
