--- a/index.html
+++ b/index.html
@@ -43,19 +43,17 @@
   <header id="header">
     <div class="container">
 
-      <div id="logo" class="pull-left">
-        <h1><a href="#intro" class="scrollto">FOSSEE</a></h1>
-        <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="#intro"><img src="img/logo.png" alt="" title="" /></img></a> -->
+      <div id = "logo" class="pull-left">
+      <a class="scrollto"><img src="img/newlogo2.png" alt="" title="" /></img></a>
       </div>
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li class="menu-active"><a href="#intro">Home</a></li>
           <li><a href="#about">About FOSSEE</a></li>
-          <li><a href="#features">Speakers</a></li>
+          <li><a href="#team">Speakers</a></li>
           <li><a href="#pricing">Special Attraction</a></li>
-          <li><a href="#team">Team</a></li>
+          <li><a href="#features">Projects</a></li>
           <li><a href="#gallery">Gallery</a></li>
           <li><a href="#contact">Contact Us</a></li>
         </ul>
@@ -69,22 +67,22 @@
   <section id="intro">
 
     <div class="intro-text">
-      <h2>Welcome to FOSSEE</h2>
+      <h3>Welcome to FOSSEE</h3>
       <p>We promote the use of FOSS tools in the country</p>
     </div>
 
     <div class="product-screens">
 
       <div class="product-screen-1" data-aos="fade-up" data-aos-delay="400">
-        <img src="img/product-screen-1.png" alt="">
+        <img src="img/foss-a.jpg" alt="">
       </div>
 
       <div class="product-screen-2" data-aos="fade-up" data-aos-delay="200">
-        <img src="img/product-screen-2.png" alt="">
+        <img src="img/foss-a.jpg" alt="">
       </div>
 
       <div class="product-screen-3" data-aos="fade-up">
-        <img src="img/product-screen-3.png" alt="">
+        <img src="img/foss-c.jpg" alt="">
       </div>
 
     </div>
@@ -94,43 +92,37 @@
   <main id="main">
 
     <!--==========================
-      About Us Section
-    ============================-->
-    <section id="about" class="section-bg">
-      <div class="container-fluid">
-        <div class="section-header">
-          <h3 class="section-title">About FOSSEE</h3>
-          <span class="section-divider"></span>
-          <p class="section-description">
-            </p>
-        </div>
+  About Us Section
+============================-->
+<section id="about" class="section-bg">
+  <div class="container-fluid">
+    <div class="section-header">
+      <h3 class="section-title">About FOSSEE</h3>
+      <span class="section-divider"></span>
+      <p class="section-description">
+        </p>
+    </div>
 
-        <div class="row">
-          <div class="col-lg-6 about-img" data-aos="fade-right">
-            <img src="img/about-img.jpg" alt="">
-          </div>
-
-          <div class="col-lg-6 content" data-aos="fade-left">
-            <h2>##</h2>
-            <h3></h3>
-            <p>
-            </p>
-
-            <ul>
-              <li><i class="ion-android-checkmark-circle"></i></li>
-              <li><i class="ion-android-checkmark-circle"></i></li>
-              <li><i class="ion-android-checkmark-circle"></i></li>
-            </ul>
-
-            <p>
-            </p>
-          </div>
-        </div>
-
+    <div class="row">
+      <div class="col-lg-6 about-img" data-aos="fade-right">
+        <img src="img/opensource.jpg" alt="">
       </div>
-    </section><!-- #about -->
 
-    <!--==========================
+      <div class="col-lg-6 content" data-aos="fade-left">
+        <h2>FOSSEE (Free and Open Source Software in Education) project promotes the use of FOSS tools in our country.</h2>
+        <h3>The term "open source" refers to something people can modify and share because its design is publicly accessible.</h3>
+        <p>
+          FOSS software is software with source code that anyone can inspect, modify, enhance and use free of cost. With this in mind, FOSSEE aims to reduce dependency on proprietary software in educational institutions.
+        </p>
+        <p>
+        They encourage the use of FOSS tools through various activities to ensure commercial software is replaced by equivalent FOSS tools. They also develop new FOSS tools and upgrade existing tools to meet requirements in academia and research. The FOSSEE project is part of the National Mission on Education through Information and Communication Technology (ICT), Ministry of Human Resources and Development, Government of India.
+        </p>
+      </div>
+    </div>
+
+  </div>
+</section><!-- #about -->
+<!--==========================
       Our Team Section
     ============================-->
     <section id="team" >
@@ -152,8 +144,8 @@
               <div class="pic"><img src="img/team/team-2.jpg" alt=""></div>
               <h4>ABHAS ABHINAV</h4>
               <div class="social">
-                <a href=""><i class="fa fa-google-plus"></i></a>
-                <a href=""><i class="fa fa-linkedin"></i></a>
+                <a href="mailto:abhas@deeproot.in"><i class="fa fa-envelope"></i></a>
+                <a href="https://www.linkedin.com/in/abhasabhinav/"><i class="fa fa-linkedin"></i></a>
               </div>
             </div>
           </div>
@@ -163,8 +155,8 @@
               <div class="pic"><img src="img/team/team-3.jpg" alt=""></div>
               <h4>KANNAN M MOUDGALYA</h4>
               <div class="social">
-                <a href=""><i class="fa fa-google-plus"></i></a>
-                <a href=""><i class="fa fa-linkedin"></i></a>
+                <a href="mailto:kannan@iitb.ac.in"><i class="fa fa-envelope"></i></a>
+                <a href="https://www.linkedin.com/in/kannan-moudgalya-4998a546/"><i class="fa fa-linkedin"></i></a>
               </div>
             </div>
           </div>
@@ -184,17 +176,18 @@
           <div class="col-12">
             <img class="advanced-feature-img-right" src="img/advanced-feature-3.jpg" alt="" data-aos="fade-left">
             <div data-aos="fade-right">
-              <h2>##</h2>
-              <h3>@@@</h3>
-              <p></p>
+              <h2>Statistics</h2>
+              <h3>FOSSEE believes in the concept of FOSS even when it comes to learning and has conducted a number of workshops.</h3>
+              <p>A variety of workshops have been conducted on leading technologies like Python, its applications in scientic computing, arduino,etc. They have collaborated with organisations like Python, Scilab, etc on the same.</p>
 
-              <p></p>
+              <p>A total of over 1000 workshops have been conducted by FOSSEE in association with popular organisations like Python, OpenFOAM, eSims,etc, which are also their textbook companions.</p>
             </div>
           </div>
         </div>
       </div>
     </div>
   </section>
+
   <section id="advanced-features">
     <div class="features-row">
       <div class="container">
@@ -231,42 +224,26 @@
 
         <div class="col-lg-4 col-md-6">
           <div class="box" data-aos="fade-right">
-            <h3>Free</h3>
-            <ul>
-              <li><i class="ion-android-checkmark-circle"></i>@@</li>
-              <li><i class="ion-android-checkmark-circle"></i>@@</li>
-              <li><i class="ion-android-checkmark-circle"></i>@@</li>
-              <li><i class="ion-android-checkmark-circle"></i>@@</li>
-            </ul>
+            <h3>About</h3>
+            <p>Any code generally functions by writing on Notepad and then compiling on Command Prompt. To do just that, you need a computer that runs Windows, which will set you back by at least Rs 20,000 but IIT Bombay students have devised a simpler and cheaper and their solution is a Rs 7,500 notebook that lets you write software code effortlessly.
 
+</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6">
           <div class="box featured" data-aos="fade-up">
-            <h3>Business</h3>
-            <ul>
-              <li><i class="ion-android-checkmark-circle"></i> @@</li>
-              <li><i class="ion-android-checkmark-circle"></i> @@</li>
-              <li><i class="ion-android-checkmark-circle"></i> @@</li>
-              <li><i class="ion-android-checkmark-circle"></i> @@</li>
-              <li><i class="ion-android-checkmark-circle"></i> @@</li>
-            </ul>
-
+            <h3>GOLDEN LAPTOP</h3>
+            <img src="img/lapy.png"></img>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6">
           <div class="box" data-aos="fade-left">
-            <h3>Developer</h3>
-            <ul>
-              <li><i class="ion-android-checkmark-circle"></i> @@</li>
-              <li><i class="ion-android-checkmark-circle"></i> @@</li>
-              <li><i class="ion-android-checkmark-circle"></i> @@</li>
-              <li><i class="ion-android-checkmark-circle"></i> @@</li>
-              <li><i class="ion-android-checkmark-circle"></i> @@</li>
-            </ul>
+            <h3>Features</h3>
+          <p>The laptop runs on a modified version of Ubuntu Linux OS. The device also comes pre-loaded with several FOSS like Chrome and Firefox , LibreOffice, Gnome player, AV tools such as Audacity and several other education tools and tutorials (such as wikipedia in 10 Indian languages)for students and researchers, as well as for watching movies and music.
 
+</p>
           </div>
         </div>
 
@@ -280,7 +257,7 @@
 
           <div class="col-lg-8 offset-lg-4">
             <div class="section-header" data-aos="fade" data-aos-duration="1000">
-              <h3 class="section-title">Product Featuress</h3>
+              <h3 class="section-title">Projects</h3>
               <span class="section-divider"></span>
             </div>
           </div>
@@ -294,24 +271,24 @@
             <div class="row">
 
               <div class="col-lg-6 col-md-6 box" data-aos="fade-left">
-                <div class="icon"><i class="ion-ios-speedometer-outline"></i></div>
+                <div class="icon"><i class="ion-ios-thunderstorm"></i></div>
                 <h4 class="title"><strong>Scilab</strong></h4>
                 <p class="description">Scilab is a free and open source software for numerical computaion developed by Scilab Enterprises,France.Scilab also includesXcos which is an open source alternative to Simulink.</p>
               </div>
               <div class="col-lg-6 col-md-6 box" data-aos="fade-left" data-aos-delay="100">
-                <div class="icon"><i class="ion-ios-flask-outline"></i></div>
+                <div class="icon"><i class="ion-social-python"></i></div>
                 <h4 class="title"><strong>Python</strong></h4>
                 <p class="description">Python is a general-purpose high-level remarkably powerful dynamic programming language that is used in wide variety of applications domain.It supports multiple programming paradigms.</p>
               </div>
               <div class="col-lg-6 col-md-6 box" data-aos="fade-left" data-aos-delay="200">
-                <div class="icon"><i class="ion-social-buffer-outline"></i></div>
+                <div class="icon"><i class="ion-social-tux"></i></div>
                 <h4 class="title"><strong>Open Foam</strong></h4>
                 <p class="description">Open Foam ia a free and open source CFD toolbox used to solve anything from complex fluids flows involving chemical reactions ,turblence and heat transfer to solid dynamics and electromagnets.</p>
               </div>
               <div class="col-lg-6 col-md-6 box" data-aos="fade-left" data-aos-delay="300">
                 <div class="icon"><i class="ion-ios-analytics-outline"></i></div>
-                <h4 class="title"><strong>Sci Lab Aurdino</strong></h4>
-                <p class="description">The Scilab-Aurdino interface is devoted to the control of aurdino from scilab.The interface help user to perform embded systems experimentson Aurdino using scilab code and also through GUI based simulation enviornment,Xcos.</p>
+                <h4 class="title"><strong>Sci Lab Arduino</strong></h4>
+                <p class="description">The Scilab-arduino interface is devoted to the control of arduino from scilab.The interface help user to perform embded systems experimentson arduino using scilab code and also through GUI based simulation enviornment,Xcos.</p>
               </div>
             </div>
 
@@ -330,22 +307,7 @@
     <!--==========================
       Call To Action Section
     ============================-->
-    <section id="call-to-action">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-9 text-center text-lg-left">
-            <h3 class="cta-title">Call To Action</h3>
-            <p class="cta-text"> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          </div>
-          <div class="col-lg-3 cta-btn-container text-center">
-          </div>
-        </div>
-
-      </div>
-    </section><!-- #call-to-action -->
-
-    <!--==========================
-      More Features Section
+    <!--      More Features Section
     ============================-->
     <section id="more-features" class="section-bg">
       <div class="container">
@@ -362,7 +324,7 @@
             <div class="box" data-aos="fade-right">
               <div class="icon"><i class="ion-calendar"></i></div>
               <h4 class="title"><a href="">Date</a></h4>
-              <p class="description">@#</p>
+              <p class="description">16th-17th February</p>
             </div>
           </div>
 
@@ -370,7 +332,7 @@
             <div class="box" data-aos="fade-left">
               <div class="icon"><i class="ion-ios-stopwatch-outline"></i></div>
               <h4 class="title"><a href="">Time</a></h4>
-              <p class="description">#$</p>
+              <p class="description">6:00 P.M. to 8:00 P.M.</p>
             </div>
           </div>
 
@@ -378,7 +340,9 @@
             <div class="box" data-aos="fade-right">
               <div class="icon"><i class="ion-ios-location"></i></div>
               <h4 class="title"><a href="">Venue</a></h4>
-              <p class="description">@#</p>
+              <p class="description">D.M. Sen Auditorium 1</br> </p>
+            </br>
+              <p class="description"></p>
             </div>
           </div>
 
@@ -386,7 +350,7 @@
             <div class="box" data-aos="fade-left">
               <div class="icon"><i class="ion-ios-people"></i></div>
               <h4 class="title"><a href="">Organised by</a></h4>
-              <p class="description">!@#</p>
+              <p class="description">GNU/Linux Users' Group, NIT Durgapur in association with IIT Bombay and Deep Root Linux</p>
             </div>
           </div>
 
@@ -469,6 +433,20 @@
       </div>
     </section><!-- #gallery -->
 
+    <section id="call-to-action">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-9 text-center text-lg-left">
+            <p class="cta-text"> "In open source, we strongly feel that to do something really well, you have to get a lot of people involved."</p>
+            <h3 class="cta-title">-Linus Torvalds</h3>
+          </div>
+          <div class="col-lg-3 cta-btn-container text-center">
+          </div>
+        </div>
+
+      </div>
+    </section><!-- #call-to-action -->
+    <!--==========================
 
     <!--==========================
       Contact Section
@@ -479,13 +457,12 @@
 
       <div class="col-lg-4 col-md-4">
         <div class="contact-about">
-          <h3>##</h3>
-          <p>@@</p>
+          <h3>Contact Us</h3>
+          <p></p>
           <div class="social-links">
-            <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-            <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
-            <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
-          </div>
+            <a href="https://www.facebook.com/nitdgplug/" ><i class="fa fa-facebook-square"></i></a>
+            <a href="mailto:contact@nitdgplug.org" ><i class="fa fa-envelope"></i></a>
+        </div>
         </div>
       </div>
 
@@ -493,17 +470,20 @@
         <div class="info">
           <div>
             <i class="ion-ios-location-outline"></i>
-            <p>A108 Adam Street<br>New York, NY 535022</p>
+            <p>NATIONAL INSTITUTE OF TECHNOLOGY,DURGAPUR<br>Mahatma Gandhi Rd, A-Zone, Durgapur, West Bengal 713209
+</p>
           </div>
 
           <div>
-            <i class="ion-ios-email-outline"></i>
-            <p>info@example.com</p>
+            <i class="ion-ios-world-outline"></i>
+            <p><a href="http://nitdgplug.org/">http://nitdgplug.org/</a></p>
           </div>
+
+
 
           <div>
             <i class="ion-ios-telephone-outline"></i>
-            <p>+1 5589 55488 55</p>
+            <p>+917076316399</p>
           </div>
 
         </div>
@@ -523,7 +503,7 @@
       <div class="row">
         <div class="col-lg-6 text-lg-left text-center">
           <div class="copyright">
-            Made With Love &#10084;	by <strong>GNU/LINUX USERS' GROUP</strong>.
+            Made With &#10084;	by <strong>GNU/LINUX USERS' GROUP</strong>.
           </div>
           <div class="credits">
             <!--
