--- a/index.html
+++ b/index.html
@@ -72,19 +72,9 @@
     </div>
 
     <div class="product-screens">
-
-      <div class="product-screen-1" data-aos="fade-up" data-aos-delay="400">
-        <img src="img/foss-a.jpg" alt="">
+        <div class="product-screen-2" data-aos="fade-up" data-aos-delay="200">
+        <img src="img/pop1.png" alt="">
       </div>
-
-      <div class="product-screen-2" data-aos="fade-up" data-aos-delay="200">
-        <img src="img/foss-a.jpg" alt="">
-      </div>
-
-      <div class="product-screen-3" data-aos="fade-up">
-        <img src="img/foss-c.jpg" alt="">
-      </div>
-
     </div>
 
   </section><!-- #intro -->
@@ -233,7 +223,7 @@
 
         <div class="col-lg-4 col-md-6">
           <div class="box featured" data-aos="fade-up">
-            <h3>GOLDEN LAPTOP</h3>
+            <h3>THE GOLDEN LAPTOP</h3>
             <img src="img/lapy.png"></img>
           </div>
         </div>
@@ -273,22 +263,22 @@
               <div class="col-lg-6 col-md-6 box" data-aos="fade-left">
                 <div class="icon"><i class="ion-ios-thunderstorm"></i></div>
                 <h4 class="title"><strong>Scilab</strong></h4>
-                <p class="description">Scilab is a free and open source software for numerical computaion developed by Scilab Enterprises,France.Scilab also includesXcos which is an open source alternative to Simulink.</p>
+                <p class="description">Scilab is a free and open source software for numerical computaion developed by Scilab Enterprises , France. Scilab also includes Xcos which is an open source alternative to Simulink .</p>
               </div>
               <div class="col-lg-6 col-md-6 box" data-aos="fade-left" data-aos-delay="100">
                 <div class="icon"><i class="ion-social-python"></i></div>
                 <h4 class="title"><strong>Python</strong></h4>
-                <p class="description">Python is a general-purpose high-level remarkably powerful dynamic programming language that is used in wide variety of applications domain.It supports multiple programming paradigms.</p>
+                <p class="description">Python is a general-purpose high-level remarkably powerful dynamic programming language that is used in wide variety of applications domain . It supports multiple programming paradigms .</p>
               </div>
               <div class="col-lg-6 col-md-6 box" data-aos="fade-left" data-aos-delay="200">
                 <div class="icon"><i class="ion-social-tux"></i></div>
                 <h4 class="title"><strong>Open Foam</strong></h4>
-                <p class="description">Open Foam ia a free and open source CFD toolbox used to solve anything from complex fluids flows involving chemical reactions ,turblence and heat transfer to solid dynamics and electromagnets.</p>
+                <p class="description">Open Foam ia a free and open source CFD toolbox used to solve anything from complex fluids flows involving chemical reactions , turblence and heat transfer to solid dynamics and electromagnets .</p>
               </div>
               <div class="col-lg-6 col-md-6 box" data-aos="fade-left" data-aos-delay="300">
                 <div class="icon"><i class="ion-ios-analytics-outline"></i></div>
                 <h4 class="title"><strong>Sci Lab Arduino</strong></h4>
-                <p class="description">The Scilab-arduino interface is devoted to the control of arduino from scilab.The interface help user to perform embded systems experimentson arduino using scilab code and also through GUI based simulation enviornment,Xcos.</p>
+                <p class="description">The Scilab-arduino interface is devoted to the control of arduino from scilab.The interface help user to perform embded systems experiments  on arduino using scilab code and also through GUI based simulation enviornment , Xcos .</p>
               </div>
             </div>
 
@@ -503,7 +493,8 @@
       <div class="row">
         <div class="col-lg-6 text-lg-left text-center">
           <div class="copyright">
-            Made With &#10084;	by <strong>GNU/LINUX USERS' GROUP</strong>.
+            <img src="img/.png"></img>
+            Made With <span class="redheart" style="font-size:150%;">&hearts;</span>	by <strong>GNU/LINUX USERS' GROUP</strong>.
           </div>
           <div class="credits">
             <!--
