--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="container">
 
       <div id = "logo" class="pull-left">
-      <a class="scrollto"><img src="img/newlogo2.png" alt="" title="" /></img></a>
+      <a href="img/nitlogo.png" class="gallery-popup scrollto"><img src="img/newlogo2.png" alt="" title="" /></img></a>
       </div>
 
       <nav id="nav-menu-container">
@@ -72,8 +72,20 @@
     </div>
 
     <div class="product-screens">
+        <div class="product-screen-1" data-aos="fade-up" data-aos-delay="400">
+        <img src="img/img1-a.jpg" alt="">
+      </div>
+    </div>
+
+    <div class="product-screens">
         <div class="product-screen-2" data-aos="fade-up" data-aos-delay="200">
-        <img src="img/pop1.png" alt="">
+        <img src="img/img2-a.jpg" alt="">
+      </div>
+    </div>
+
+    <div class="product-screens">
+        <div class="product-screen-3" data-aos="fade-up">
+        <img src="img/img3-a.jpg" alt="">
       </div>
     </div>
 
@@ -131,7 +143,7 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="member">
-              <div class="pic"><img src="img/team/team-2.jpg" alt=""></div>
+              <div class="pic"><a href="img/team/team-2.jpg" class="gallery-popup"><img src="img/team/team-2.jpg" alt=""></a></div>
               <h4>ABHAS ABHINAV</h4>
               <div class="social">
                 <a href="mailto:abhas@deeproot.in"><i class="fa fa-envelope"></i></a>
@@ -142,7 +154,7 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="member">
-              <div class="pic"><img src="img/team/team-3.jpg" alt=""></div>
+              <div class="pic"><a href="img/team/team-3.jpg" class="gallery-popup"><img src="img/team/team-3.jpg" alt=""></a></div>
               <h4>KANNAN M MOUDGALYA</h4>
               <div class="social">
                 <a href="mailto:kannan@iitb.ac.in"><i class="fa fa-envelope"></i></a>
@@ -224,7 +236,7 @@
         <div class="col-lg-4 col-md-6">
           <div class="box featured" data-aos="fade-up">
             <h3>THE GOLDEN LAPTOP</h3>
-            <img src="img/lapy.png"></img>
+          <a href="img/lapy.png" class="gallery-popup"><img src="img/lapy.png"></a>
           </div>
         </div>
 
@@ -340,7 +352,7 @@
             <div class="box" data-aos="fade-left">
               <div class="icon"><i class="ion-ios-people"></i></div>
               <h4 class="title"><a href="">Organised by</a></h4>
-              <p class="description">GNU/Linux Users' Group, NIT Durgapur in association with IIT Bombay and Deep Root Linux</p>
+            <a href="http://nitdgplug.org"><p class="description">GNU/Linux Users' Group, NIT Durgapur</a> in association with IIT Bombay and Deep Root Linux</p>
             </div>
           </div>
 
@@ -423,6 +435,12 @@
       </div>
     </section><!-- #gallery -->
 
+    <div>
+    </br>
+    </br>
+    </br>
+    </div>
+
     <section id="call-to-action">
       <div class="container">
         <div class="row">
@@ -478,6 +496,10 @@
 
         </div>
       </div>
+      <div class="col-lg-5 col-md-8">
+        <div id="map"><iframe class ="form" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.508575886982!2d87.28754511460298!3d23.550171184688445!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f772081cede5e9%3A0x33fb9ccb243dfa5!2sNational+Institute+of+Technology!5e0!3m2!1sen!2sin!4v1494654405132"width="450" height="250" ,allowfullscreen ></iframe></div>
+      </div>
+
 
     </section>
 
@@ -493,8 +515,8 @@
       <div class="row">
         <div class="col-lg-6 text-lg-left text-center">
           <div class="copyright">
-            <img src="img/.png"></img>
-            Made With <span class="redheart" style="font-size:150%;">&hearts;</span>	by <strong>GNU/LINUX USERS' GROUP</strong>.
+          <a href="img/glug logo hd.png" class= "gallery-popup"><img src="img/gluglogo1.png"></img></a>
+            &nbsp;&nbsp;Made With <span class="redheart" style="font-size:150%;">&hearts;</span>	by <strong>GNU/LINUX USERS' GROUP</strong>.
           </div>
           <div class="credits">
             <!--
@@ -518,6 +540,7 @@
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
   <!-- JavaScript Libraries -->
+
   <script src="lib/jquery/jquery.min.js"></script>
   <script src="lib/jquery/jquery-migrate.min.js"></script>
   <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -526,6 +549,7 @@
   <script src="lib/superfish/hoverIntent.js"></script>
   <script src="lib/superfish/superfish.min.js"></script>
   <script src="lib/magnific-popup/magnific-popup.min.js"></script>
+
 
   <!-- Contact Form JavaScript File -->
   <script src="contactform/contactform.js"></script>
