--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   <meta content="" name="description">
 
   <!-- Favicons -->
-  <link href="img/favicon.png" rel="icon">
-  <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link rel="shortcut icon" href="img/#.png">
+    <link rel="apple-touch-icon" href="assets/img/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="assets/img/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="assets/img/apple-touch-icon-114x114.png">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700|Open+Sans:300,300i,400,400i,700,700i" rel="stylesheet">
@@ -496,10 +498,14 @@
 
         </div>
       </div>
-      <div class="col-lg-5 col-md-8">
-        <div id="map"><iframe class ="form" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.508575886982!2d87.28754511460298!3d23.550171184688445!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f772081cede5e9%3A0x33fb9ccb243dfa5!2sNational+Institute+of+Technology!5e0!3m2!1sen!2sin!4v1494654405132"width="450" height="250" ,allowfullscreen ></iframe></div>
-      </div>
 
+      <!--==========================
+        Googlemap
+      ============================-->
+      <div class="col-lg-5 col-md-8">
+        <iframe class ="form" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.508575886982!2d87.28754511460298!3d23.550171184688445!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f772081cede5e9%3A0x33fb9ccb243dfa5!2sNational+Institute+of+Technology!5e0!3m2!1sen!2sin!4v1494654405132"width="450" height="250" ,allowfullscreen ></iframe>
+      </div>
+      <!--google map -->
 
     </section>
 
